ChangeLog:

nxcomp-3.2.0-6

- Changes considering that unsetenv() returns void on Mac OS X.

nxcomp-3.2.0-5

- Fixed TR03F02024. Assume the launchd unix socket as X socket.

- Changed the authorization cookie retrieval when using the launchd
  socket on MacOSX, in order to wait for the X server start.

nxcomp-3.2.0-4

- Fixed TR03F02026. Unset environment variable LD_LIBRARY_PATH before
  calling the exec function running nxclient.

nxcomp-3.2.0-3

- Fix addMsTimestamp() and subMsTimestamp(). Remove the check for
  a valid input in diffTimestamp() and diffUsTimestamp().

nxcomp-3.2.0-2

- Fixed TR12E01973. Now the correct number of bits are used for the
  number of points in a X_FillPoly request.

nxcomp-3.2.0-1

- Opened the 3.2.0 branch based on nxcomp-3.1.0-6.

nxcomp-3.1.0-6

- Always use a timeout of 50 ms to update the congestion counter.

nxcomp-3.1.0-5

- Solve the possible deadlock caused by both proxies running out of
  tokens at the same time.

- In ServerProxy::handleCheckDrop() copy the list since the function
  can delete the elements.

nxcomp-3.1.0-4

- Classes ProxyReadBuffer and ServerReadBuffer returned an invalid
  number of characters to read in the case of a readable() failure.

- Connections to proxy versions newer than 3.0.0 were not accepted.

- Reading options from file could fail if options contained spaces
  or other characters interrupting the fscanf()'s matching of input.

- The proxy link could not be flushed if a ping request was replied
  after the end of the read loop.

nxcomp-3.1.0-3

- Fixed a compilation warning on GCC 2.95.
  
nxcomp-3.1.0-2

- Solved TR09E01852. Modified the encoding of the number of rects
  in the XSetClipRectangles request.
  
nxcomp-3.1.0-1

- Opened the 3.1.0 branch based on nxcomp-3.0.0-46.

nxcomp-3.0.0-46

- Fixed TR09E01865 and TR08E01831. Assume the old behavior of compr-
  essing the CUPS, SMB, HTTP and Font channels when connected to an
  old proxy version.

nxcomp-3.0.0-45
