@@ -15,7 +15,6 @@
 /*                                                                        */
 /**************************************************************************/
 
-#include <iostream.h>
 #include <stdio.h>
 #include <ctype.h>
 #include <stdlib.h>
